# tauri-plugin-getappscafe-auth

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  package.json
examples/: README.md
guest-js/: index.d.ts  index.js  styles.js  ui.js
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: allow-get_grace_state.toml  allow-get_hardware_id.toml  allow-get_platform_info.toml  allow-init_activation.toml  allow-open_activation_url.toml  allow-poll_activation.toml  allow-shared_token_get.toml  allow-shared_token_remove.toml  allow-shared_token_set.toml  allow-whoami.toml  deny-get_grace_state.toml  deny-get_hardware_id.toml  deny-get_platform_info.toml  deny-init_activation.toml  deny-open_activation_url.toml  deny-poll_activation.toml  deny-shared_token_get.toml  deny-shared_token_remove.toml  deny-shared_token_set.toml  deny-whoami.toml  get_grace_state.toml  get_hardware_id.toml  get_platform_info.toml  init_activation.toml  open_activation_url.toml  poll_activation.toml  shared_token_get.toml  shared_token_remove.toml  shared_token_set.toml  whoami.toml  whoami_cache_get.toml  whoami_cache_remove.toml  whoami_cache_set.toml
permissions/schemas/: schema.json
src/: commands.rs  error.rs  http.rs  lib.rs  models.rs  storage.rs  storage_macos.rs
