[package]
name = "tauri-plugin-getappscafe-auth"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Drop-in device-activation flow for Tauri apps that ship under the getapps.cafe license."
repository = "https://github.com/mrleepng/tauri-plugin-getappscafe-auth"
readme = "README.md"
keywords = ["tauri", "plugin", "auth", "license", "getapps"]
categories = ["authentication"]

[dependencies]
tauri = { version = "2", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync", "rt"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
machine-uid = "0.5"
hostname = "0.4"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
open = "5"
log = "0.4"
