[package]
name = "tauri-plugin-getappscafe-auth"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "Drop-in device-activation flow for Tauri apps that ship under the getapps.cafe license."
repository = "https://github.com/getappscafe/tauri-plugin-getappscafe-auth"
readme = "README.md"
keywords = ["tauri", "plugin", "auth", "license", "getapps"]
categories = ["authentication"]
links = "tauri-plugin-getappscafe-auth"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
tauri = { version = "2", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync", "rt"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
machine-uid = "0.5"
hostname = "0.4"
open = "5"
log = "0.4"

# macOS uses the Security framework directly so we can pin items to a shared
# `kSecAttrAccessGroup` (= "VFYA7T675R.cafe.getapps.shared"). Without that, two
# signed apps each end up writing to their own default access group and reading
# the *other* app's item triggers the "enter your Keychain password" dialog.
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
# OSX_10_15 enables `Location::DataProtectionKeychain` - required for shared
# access groups; the legacy file keychain ignores `kSecAttrAccessGroup`.
security-framework = { version = "3", features = ["OSX_10_15"] }
security-framework-sys = { version = "2", features = ["OSX_10_15"] }

# Windows/Linux don't have an access-group concept; `keyring` is enough.
[target.'cfg(not(target_os = "macos"))'.dependencies]
keyring = { version = "3", features = ["windows-native", "sync-secret-service"] }
